feat: chat event

--- a/src/Hosihikari.Minecraft.Extension.csproj
+++ b/src/Hosihikari.Minecraft.Extension.csproj
@@ -11,6 +11,12 @@
         <Reference Include="Hosihikari.FastElfQuery">
             <HintPath>..\..\FastElfQuery\src\bin\Release\net7.0\Hosihikari.FastElfQuery.dll</HintPath>
         </Reference>
+        <Reference Include="Hosihikari.Logging">
+          <HintPath>..\..\Logging\src\bin\Release\net7.0\Hosihikari.Logging.dll</HintPath>
+        </Reference>
+        <Reference Include="Hosihikari.Minecraft">
+          <HintPath>..\..\Minecraft\src\bin\Release\net7.0\Hosihikari.Minecraft.dll</HintPath>
+        </Reference>
         <Reference Include="Hosihikari.NativeInterop">
             <HintPath>..\..\NativeInterop\src\bin\Release\net7.0\Hosihikari.NativeInterop.dll</HintPath>
         </Reference> 
