chore: Fix package reference

--- a/src/Hosihikari.Minecraft.Extension.csproj
+++ b/src/Hosihikari.Minecraft.Extension.csproj
@@ -9,12 +9,10 @@
 
     <ItemGroup>
       <PackageReference Include="Hosihikari.Logging" Version="1.0.0" />
+      <PackageReference Include="Hosihikari.FastElfQuery" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <Reference Include="Hosihikari.FastElfQuery">
-            <HintPath>..\..\FastElfQuery\src\bin\Release\net7.0\Hosihikari.FastElfQuery.dll</HintPath>
-        </Reference> 
         <Reference Include="Hosihikari.Minecraft">
           <HintPath>..\..\Minecraft\src\bin\Release\net7.0\Hosihikari.Minecraft.dll</HintPath>
         </Reference>
