--- a/src/Hosihikari.Minecraft.Extension.csproj
+++ b/src/Hosihikari.Minecraft.Extension.csproj
@@ -8,14 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Hosihikari.Logging" Version="1.0.1" />
       <PackageReference Include="Hosihikari.FastElfQuery" Version="1.0.0" />
       <PackageReference Include="Hosihikari.NativeInterop" Version="1.0.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Reference Include="Hosihikari.Minecraft">
-          <HintPath>..\..\Minecraft\src\bin\Release\net7.0\Hosihikari.Minecraft.dll</HintPath>
+          <HintPath>..\..\Minecraft\src\bin\Release\net8.0\Hosihikari.Minecraft.dll</HintPath>
         </Reference> 
     </ItemGroup>
 
